--- a/JobTrackerApp/src/components/manage-jobprofiles/jobprofile/jobprofile.component.html
+++ b/JobTrackerApp/src/components/manage-jobprofiles/jobprofile/jobprofile.component.html
@@ -2,26 +2,34 @@
   <div class="jobprofile-welcome-custom">Welcome to your Job Portal, {{userName}}</div>
   <mat-form-field>
     <mat-label>Profile</mat-label>
-    <mat-select [(value)]="jobProfileSelected" matTooltip="Select your profile" (selectionChange)="onJobProfileChange($event)">
+    <mat-select [(value)]="jobProfileSelected" matTooltip="Select your profile"
+      (selectionChange)="onJobProfileChange($event)">
       <mat-option [value]="null" matTooltipPosition="right" (click)="onJobDefaultClick()">Default Profile</mat-option>
       <mat-option *ngFor="let jobProfile of jobProfiles" [value]="jobProfile">{{jobProfile.profileName}}</mat-option>
     </mat-select>
   </mat-form-field>
   <span>
-    <mat-icon class="jobprofile-icons" matTooltip="Add new job profile" fontIcon="add" *ngIf="showJobOptions" (click)="onCreateJobProfile()"></mat-icon>
-    <mat-icon class="jobprofile-icons" matTooltip="Update job profile" fontIcon="edit" *ngIf="isSelected" (click)="onEditJobProfile()"></mat-icon>
-    <mat-icon class="jobprofile-icons" matTooltip="Delete job profile" fontIcon="delete" *ngIf="isSelected" (click)="onDeleteJobProfile()"></mat-icon>
+    <mat-icon class="jobprofile-icons" matTooltip="Add new job profile" fontIcon="add" *ngIf="showJobOptions"
+      (click)="onCreateJobProfile()"></mat-icon>
+    <mat-icon class="jobprofile-icons" matTooltip="Update job profile" fontIcon="edit" *ngIf="isSelected"
+      (click)="onEditJobProfile()"></mat-icon>
+    <mat-icon class="jobprofile-icons" matTooltip="Delete job profile" fontIcon="delete" *ngIf="isSelected"
+      (click)="onDeleteJobProfile()"></mat-icon>
   </span>
-  <span class="span-right">
-    <mat-icon class="employerprofile-icons" matTooltip="Add new employer profile" fontIcon="add" *ngIf="showEmployerOptions" (click)="onCreateEmployerProfile()"></mat-icon>
-    <mat-icon class="employerprofile-icons" matTooltip="Update employer profile" fontIcon="edit" *ngIf="showEmployerOptions" (click)="onEditEmployerProfile()"></mat-icon>
-    <mat-icon class="employerprofile-icons" matTooltip="Delete employer profile" fontIcon="delete" *ngIf="showEmployerOptions" (click)="onDeleteEmployerProfile()"></mat-icon>
+  <span class="employer-icons-span-right">
+    <mat-icon class="employerprofile-icons" matTooltip="Add new employer profile" fontIcon="add"
+      *ngIf="showEmployerOptions" (click)="onCreateEmployerProfile()"></mat-icon>
+    <mat-icon class="employerprofile-icons" matTooltip="Update employer profile" fontIcon="edit"
+      *ngIf="showEmployerOptions" (click)="onEditEmployerProfile()"></mat-icon>
+    <mat-icon class="employerprofile-icons" matTooltip="Delete employer profile" fontIcon="delete"
+      *ngIf="showEmployerOptions" (click)="onDeleteEmployerProfile()"></mat-icon>
   </span>
-  <table mat-table *ngIf="isSelected" [dataSource]="dataSource" matSort (matSortChange)="sortData($event)" class="mat-elevation-z8 table-border">
+  <table mat-table *ngIf="isSelected" [dataSource]="dataSource" matSort (matSortChange)="sortData($event)"
+    class="mat-elevation-z8 table-border">
 
     <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Name"> Name </th>
-      <td mat-cell *matCellDef="let element"> 
+      <td mat-cell *matCellDef="let element">
         <a href="#" (click)="onNameClick($event, element)">{{element.name}}</a>
       </td>
     </ng-container>
@@ -30,7 +38,7 @@
       <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by City"> City </th>
       <td mat-cell *matCellDef="let element"> {{element.city}} </td>
     </ng-container>
-  
+
     <ng-container matColumnDef="state">
       <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by State"> State </th>
       <td mat-cell *matCellDef="let element"> {{element.state}} </td>
@@ -57,23 +65,16 @@
     </ng-container>
 
     <ng-container matColumnDef="latestupdate">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Lastest Update"> Latest Update </th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Lastest Update"> Latest
+        Update </th>
       <td mat-cell *matCellDef="let element"> {{element.latestUpdate}} </td>
     </ng-container>
-  
+
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
 
-  <mat-paginator *ngIf="isSelected"
-  #paginator
-  (page)="onPageChange($event)"
-  [length]="totalRecords"
-  [pageIndex]="pageIndex"
-  [pageSize]="pageSize"
-  [pageSizeOptions]="[5, 10, 15]"
-  showFirstLastButtons>
+  <mat-paginator *ngIf="isSelected" #paginator (page)="onPageChange($event)" [length]="totalRecords"
+    [pageIndex]="pageIndex" [pageSize]="pageSize" [pageSizeOptions]="[5, 10, 15]" showFirstLastButtons>
   </mat-paginator>
 </div>
-
-
