--- a/JobTrackerApp/src/components/manage-jobprofiles/jobprofile/jobprofile.component.html
+++ b/JobTrackerApp/src/components/manage-jobprofiles/jobprofile/jobprofile.component.html
@@ -9,6 +9,9 @@
     </mat-select>
   </mat-form-field>
   <span>
+    <button mat-mini-fab aria-label="Example icon button with a menu icon">
+      <mat-icon>menu</mat-icon>
+    </button>
     <mat-icon class="jobprofile-icons" matTooltip="Add new job profile" fontIcon="add" *ngIf="showJobOptions"
       (click)="onCreateJobProfile()"></mat-icon>
     <mat-icon class="jobprofile-icons" matTooltip="Update job profile" fontIcon="edit" *ngIf="isSelected"
@@ -17,6 +20,11 @@
       (click)="onDeleteJobProfile()"></mat-icon>
   </span>
   <span class="employer-icons-span-right">
+    <button mat-mini-fab aria-label="Example icon button with a menu icon">
+      <mat-icon>menu</mat-icon>
+    </button>
+    <app-upload-modular *ngIf="showEmployerOptions" ></app-upload-modular>
+    <app-download-modular *ngIf="showEmployerOptions" ></app-download-modular>
     <mat-icon class="employerprofile-icons" matTooltip="Add new employer profile" fontIcon="add"
       *ngIf="showEmployerOptions" (click)="onCreateEmployerProfile()"></mat-icon>
     <mat-icon class="employerprofile-icons" matTooltip="Update employer profile" fontIcon="edit"
