--- a/JobTrackerApp/src/components/login/login.component.scss
+++ b/JobTrackerApp/src/components/login/login.component.scss
@@ -32,13 +32,17 @@ form {
 .login-form {
   display: flex;
   flex-direction: column;
-  background-color: #f0f0f0;
+  background-color: #b1aaaa;
+  opacity: 0.9;
   border-radius: 4px;
   padding-top: 10%;
   padding-bottom: 5%;
   padding-right: 10px;
   max-width: 400px;
   margin: auto;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
 }
 
 mat-form-field {
@@ -46,7 +50,7 @@ mat-form-field {
   padding: 10%;
   width: 100%;
   height: 100%;
-  font-size: 20px;
+  font-size: 13px;
 }
 
 .login-container {
@@ -60,21 +64,16 @@ mat-dialog-content form mat-form-field:first-of-type {
   margin-top: 4px;
 }
 
-.login-label-custom {
-  padding: 10px;
-  font-weight: 500;
-}
-
-login-form-custom {
-  //display: flex;
-  //flex-direction: column;
-  background-color: #f0f0f0;
-  //border-radius: 4px;
-  //padding-top: 10%;
-  //padding-bottom: 5%;
-  //padding-right: 10px;
-  //max-width: 400px;
-  //margin: auto;
+.login-form-custom {
+  display: flex;
+  //background-color: #f0f0f0;
+  padding: 0;
+  margin: 0;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  margin-left: 15px;
+  margin-right: 5px;
 }
 
 .login-button {
