Added downloadoptions for readability, moved paging response to common folders, fixed a lot of the download controllers to separate tasks, employer profile service now checks if it should lazy load of eager load.

--- a/JobTrackerApp/src/components/modular/download-modular/download-modular.component.html
+++ b/JobTrackerApp/src/components/modular/download-modular/download-modular.component.html
@@ -1,2 +1,5 @@
-<mat-icon class="employerprofile-icons" matTooltip="Download Excel" fontIcon="file_download"
-     (click)="onDownloadEmployerProfile()"></mat-icon>
+<!-- <mat-icon class="employerprofile-icons" matTooltip="Download Excel" fontIcon="file_download"
+     (click)="onDownloadEmployerProfile()"></mat-icon> -->
+
+     <mat-icon class="employerprofile-icons" matTooltip="Download Excel" fontIcon="file_download"
+     (click)="onDownloadEmployerProfileCsv()"></mat-icon>
