Added a new Actions column for action items like edit, and delete per row.

--- a/JobTrackerApp/src/components/manage-jobprofiles/jobprofile/jobprofile.component.scss
+++ b/JobTrackerApp/src/components/manage-jobprofiles/jobprofile/jobprofile.component.scss
@@ -71,3 +71,8 @@
   float: right;
   margin-top: 50px;
 }
+
+.employer-icons-span-right-inrow {
+  align-items: center;
+  justify-content: center;
+}
