--- a/JobTrackerApp/src/components/manage-jobprofiles/jobprofile/jobprofile.component.html
+++ b/JobTrackerApp/src/components/manage-jobprofiles/jobprofile/jobprofile.component.html
@@ -28,6 +28,7 @@
       (click)="onDeleteJobProfile()"></mat-icon>
   </span>
   <span class="employer-icons-span-right">
+
     <!-- <button mat-mini-fab [matMenuTriggerFor]="menu2" aria-label="Example icon button with a menu icon">
       <mat-icon>menu</mat-icon>
     </button>
@@ -39,14 +40,15 @@
       <button mat-menu-item (click)="onEditEmployerProfile()">Update employer profile</button>
       <button mat-menu-item (click)="onDeleteEmployerProfile()">Delete employer profile</button>
     </mat-menu> -->
-    <app-upload-modular *ngIf="showEmployerOptions" [_jobProfileId]="jobProfileSelected?.id || null" ></app-upload-modular>
-    <app-download-modular *ngIf="showEmployerOptions" [_jobProfileId]="jobProfileSelected?.id || null"></app-download-modular>
+
+    <app-upload-modular class="employerprofile-icons" *ngIf="showEmployerOptions" [_jobProfileId]="jobProfileSelected?.id || null" matTooltip="Upload employer CSV"></app-upload-modular>
+    <app-download-modular class="employerprofile-icons" *ngIf="showEmployerOptions" [_jobProfileId]="jobProfileSelected?.id || null" matTooltip="Download employer CSV"></app-download-modular>
     <mat-icon class="employerprofile-icons" matTooltip="Add new employer profile" fontIcon="add"
       *ngIf="showEmployerOptions" (click)="onCreateEmployerProfile()"></mat-icon>
-    <mat-icon class="employerprofile-icons" matTooltip="Update employer profile" fontIcon="edit"
+    <!-- <mat-icon class="employerprofile-icons" matTooltip="Update employer profile" fontIcon="edit"
       *ngIf="showEmployerOptions" (click)="onEditEmployerProfile()"></mat-icon>
     <mat-icon class="employerprofile-icons" matTooltip="Delete employer profile" fontIcon="delete"
-      *ngIf="showEmployerOptions" (click)="onDeleteEmployerProfile()"></mat-icon>
+      *ngIf="showEmployerOptions" (click)="onDeleteEmployerProfile()"></mat-icon> -->
   </span>
   <table mat-table *ngIf="isSelected" [dataSource]="dataSource" matSort (matSortChange)="sortData($event)"
     class="mat-elevation-z8 table-border">
@@ -94,6 +96,24 @@
       <td mat-cell *matCellDef="let element"> {{element.latestUpdate}} </td>
     </ng-container>
 
+    <ng-component matColumnDef="actions">
+      <th mat-header-cell *matHeaderCellDef> Actions </th>
+      <td mat-cell *matCellDef="let element">
+        <span class="employer-icons-span-right-inrow">
+          <!-- <app-upload-modular *ngIf="showEmployerOptions"
+            [_jobProfileId]="jobProfileSelected?.id || null"></app-upload-modular>
+          <app-download-modular *ngIf="showEmployerOptions"
+            [_jobProfileId]="jobProfileSelected?.id || null"></app-download-modular>
+          <mat-icon class="employerprofile-icons" matTooltip="Add new employer profile" fontIcon="add"
+            *ngIf="showEmployerOptions" (click)="onCreateEmployerProfile()"></mat-icon> -->
+          <mat-icon class="employerprofile-icons" matTooltip="Update employer profile" fontIcon="edit"
+            *ngIf="showEmployerOptions" (click)="onEditEmployerProfile()"></mat-icon>
+          <mat-icon class="employerprofile-icons" matTooltip="Delete employer profile" fontIcon="delete"
+            *ngIf="showEmployerOptions" (click)="onDeleteEmployerProfile()"></mat-icon>
+        </span>
+      </td>
+    </ng-component>
+    
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
