--- a/JobTrackerApp/src/components/manage-jobprofiles/jobprofile/jobprofile.component.html
+++ b/JobTrackerApp/src/components/manage-jobprofiles/jobprofile/jobprofile.component.html
@@ -107,7 +107,7 @@
           <mat-icon class="employerprofile-icons" matTooltip="Add new employer profile" fontIcon="add"
             *ngIf="showEmployerOptions" (click)="onCreateEmployerProfile()"></mat-icon> -->
           <mat-icon class="employerprofile-icons" matTooltip="Update employer profile" fontIcon="edit"
-            *ngIf="showEmployerOptions" (click)="onEditEmployerProfile()"></mat-icon>
+            *ngIf="showEmployerOptions" (click)="onEditEmployerProfile($event, element)"></mat-icon>
           <mat-icon class="employerprofile-icons" matTooltip="Delete employer profile" fontIcon="delete"
             *ngIf="showEmployerOptions" (click)="onDeleteEmployerProfile()"></mat-icon>
         </span>
